# phnx-sdf

./: .editorconfig  .gitignore  .gitmodules  CONTRIBUTING.md  PhnxSDF-QC.iss  PhnxSDF.iss  arm-gcc9.iss  install_sdf.cmd  mingw64-gcc8.iss  riscv-gcc8.iss  sdf.cmd  sdfqc.cmd  uninstal_sdf.cmd
components/cutest/: CMakeLists.txt
components/embUnit/: CMakeLists.txt
components/freertos/: CMakeLists.txt
components/gd32vf10x/: CMakeLists.txt  do.py  openocd.cfg
components/gd32vf10x/.project/: CMakeLists.txt
components/gd32vf10x/.project/vscode/: c_cpp_properties.json.in  tasks.json.in
components/phnx01/: CMakeLists.txt  do.py  openocd.cfg
components/phnx01/drvlib/: anac.c  anac.h  assert.c  assert.h  debug_frmwrk.c  debug_frmwrk.h  efc.c  efc.h  i2c.c  i2c.h  iom.c  iom.h  lptimer.c  lptimer.h  pmu.h  spi.c  spi.h  sysc.c  sysc.h  timer.c  timer.h  uart.c  uart.h  wdt.c  wdt.h
components/phnx01/freertos/: heap_3.c  port.c
components/phnx01/include/: FH_phoenix01.h  startup.h  system.h
components/phnx01/ldscripts/: phoenix.ld
components/phnx01/startup/: delay.c  retarget.c  startup.c
components/phnx02/: CMakeLists.txt  do.py
components/phnx02/drivers/: accel.c  clock.c  clock.h  delay.c  delay.h  led.c  led.h  ring.c  ring.h  touch.c  uart.c  uart.h  uart2.c.opt  usb.c  usb.h
components/phnx02/include/: freedom.h
components/phnx02/ldscripts/: MKL25Z4.ld
components/phnx02/startup/: retarget.c  startup.c
components/phnx03/: CMakeLists.txt  do.py
components/phnx03/.project/vscode/: extensions.json.in  launch.json.in  tasks.json.in
components/phnx03/freertos/: freertos_risc_v_chip_specific_extensions.h  portASM_e.S
components/phnx03/ldscripts/: GD32VF103x8.lds  flash.ld
components/phnx03/startup/: handlers.c  init.c  retarget.c  startup.c
components/rt-thread/: CMakeLists.txt
docs/: GetStarted.md  HWReference.md  README.md  RTOSReference.md  Resources.md  _sidebar.md  index.html  mydocsify.js
examples/gd32vf10x/01_GPIO_Running_LED/: main.c
examples/gd32vf10x/02_GPIO_Key_Polling_mode/: main.c  readme.txt
examples/gd32vf10x/03_EXTI_Key_Interrupt_mode/: gd32vf103_it.c  gd32vf103_it.h  gd32vf103c_start.c  main.c  readme.txt
examples/gd32vf10x/04_USBFS/CDC_ACM/: app.c  cdc_acm_core.c  cdc_acm_core.h  gd32vf103_hw.c  gd32vf103_it.h  gd32vf103c_start.h  (+4 more)
examples/gd32vf10x/05_RT-Thread_Demo/: CMakeLists.txt  flash.lds  main.c
examples/nonos_blink_phnx02/: CMakeLists.txt
examples/nonos_blink_phnx02/src/: main.c
examples/nonos_blink_phnx03/: CMakeLists.txt
examples/nonos_blink_phnx03/src/: main.c
examples/nonos_smokedetect_phnx02/: CMakeLists.txt
examples/nonos_smokedetect_phnx03/: CMakeLists.txt
examples/nonos_smokedetect_phnx03/include/: FreeRTOSConfig.h
examples/nonos_smokedetect_phnx03/src/: main.c
examples/rtos_blink_phnx02/: CMakeLists.txt
examples/rtos_blink_phnx02/src/: hooks.c  main.c
examples/rtos_blink_phnx03/: CMakeLists.txt
examples/rtos_blink_phnx03/include/: FreeRTOSConfig.h
examples/rtos_blink_phnx03/src/: main.c
examples/rtos_smokedetect_phnx02/include/: FreeRTOSConfig.h
examples/rtos_smokedetect_phnx03/src/: main.c
inno/: Afterinfo.txt  BeforeInfo-QC.txt  BeforeInfo.txt  checkDep-QC.iss  checkDep.iss  installExt-QC.iss  installExt.iss  modpath.iss  updatePath.iss
inno/vscodeExt/: EditorConfig.EditorConfig-0.15.1.vsix  MS-CEINTL.vscode-language-pack-zh-hans-1.51.1.vsix  SanaAjani.taskrunnercode-0.3.0.vsix
platformio/: LICENSE.md  README.md  platform.json
platformio/boards/: phoenix02-dev.json  phoenix03-dev.json
platformio/builder/: main.py
platformio/builder/frameworks/: phnx02.py  phnx03.py
platformio/examples/nonos-phnx02-blink/: platformio.ini
platformio/examples/nonos-phnx03-blink/: platformio.ini
tools/: check_python_dependencies.py  requirements.txt  sdf.py  sdfqc.py
tools/cmake/: component.cmake  cppcheck.cmake  project.cmake  toolchain-fdm32vs10x.cmake  toolchain-fdv32s30x.cmake  toolchain-gd32vf10x.cmake  toolchain-mingw.cmake  toolchain-phnx01.cmake  toolchain-phnx03.cmake  toolchain-stm32f10x.cmake
(+41 files in other folders)
